--- a/src/components/TabBar/TabBar.scss
+++ b/src/components/TabBar/TabBar.scss
@@ -1,9 +1,8 @@
 .content {
   width: 100%;
-  position: absolute;
-  bottom: 0px;
+  height: 57px;
   .body {
-    padding: 10px 0px;
+    padding: 6px 0px 2px;
     display: flex;
     justify-content: space-around;
     .item {
