--- a/src/components/TabBar/TabBar.css
+++ b/src/components/TabBar/TabBar.css
@@ -1,11 +1,10 @@
 .content {
   width: 100%;
-  position: absolute;
-  bottom: 0px;
+  height: 57px;
 }
 
 .content .body {
-  padding: 10px 0px;
+  padding: 6px 0px 2px;
   display: flex;
   justify-content: space-around;
 }
