--- a/src/components/TabBar/TabBar.css
+++ b/src/components/TabBar/TabBar.css
@@ -11,6 +11,9 @@
 
 .content .body .item {
   font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .content .body .item img {
