--- a/src/components/TabBar/TabBar.scss
+++ b/src/components/TabBar/TabBar.scss
@@ -7,6 +7,9 @@
     justify-content: space-around;
     .item {
       font-size: 12px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       img {
         width: 30px;
         height: 30px;
