--- a/src/components/HouseDetails/index.module.css
+++ b/src/components/HouseDetails/index.module.css
@@ -2,12 +2,24 @@
   width: 100%;
   height: 250px;
   overflow: hidden;
+  position: relative;
 }
 
-.image img {
+.image .swiperImg {
   height: 450px;
   object-fit: cover;
   transform: translate(-80px, -120px);
+}
+
+.image .show {
+  z-index: 2;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50px;
+  height: 50px;
+  opacity: 0.8;
 }
 
 .house_info {
