--- a/src/components/HouseDetails/index.module.scss
+++ b/src/components/HouseDetails/index.module.scss
@@ -2,11 +2,22 @@
   width: 100%;
   height: 250px;
   overflow: hidden;
-  img {
+  position: relative;
+  .swiperImg {
     // width: 100%;
     height: 450px;
     object-fit: cover;
     transform: translate(-80px,-120px);
+  }
+  .show {
+    z-index: 2;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50px;
+    height: 50px;
+    opacity: 0.8;
   }
 }
 
