--- a/src/containers/News/ChatPanel/style.css
+++ b/src/containers/News/ChatPanel/style.css
@@ -1,11 +1,20 @@
+:root {
+    box-sizing: border-box;
+}
+
 .input-area {
     width: 100%;
     position: fixed;
+    display: flex;
     bottom: 0;
-    margin-left: 10px;
-    margin-right: 10px;
 }
 
 .input-area input {
-    text-align: left;
+    flex-grow: 1;
+    flex-shrink: 0.9;
+}
+
+.input-area button {
+    flex-grow: 1;
+    flex-shrink: 0;
 }
