--- a/src/components/TabBar/TabBar.css
+++ b/src/components/TabBar/TabBar.css
@@ -1,19 +1,17 @@
 .content {
   width: 100%;
-  height: 57px;
+  position: absolute;
+  bottom: 0px;
 }
 
 .content .body {
-  padding: 6px 0px 2px;
+  padding: 10px 0px;
   display: flex;
   justify-content: space-around;
 }
 
 .content .body .item {
   font-size: 12px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .content .body .item img {
