--- a/src/components/TabBar/TabBar.scss
+++ b/src/components/TabBar/TabBar.scss
@@ -1,15 +1,13 @@
 .content {
   width: 100%;
-  height: 57px;
+  position: absolute;
+  bottom: 0px;
   .body {
-    padding: 6px 0px 2px;
+    padding: 10px 0px;
     display: flex;
     justify-content: space-around;
     .item {
       font-size: 12px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
       img {
         width: 30px;
         height: 30px;
