--- a/src/containers/HouseDetails/index.module.scss
+++ b/src/containers/HouseDetails/index.module.scss
@@ -11,10 +11,10 @@
       z-index: 5;
     }
     .navHeader_1 {
-      :global  .NavHeader_navbar__CC-gk{
+      :global  .adm-nav-bar{
         color: #fff !important;
         background: none !important;
-        }
+      }
     }
     .image {
       width: 100%;
